# flask-cool-app

./: .dockerignore  .gitignore  .nixpacks  .tool-versions  Dockerfile  README.md  Taskfile.yml  app.py  compose.yml  pyproject.toml
scripts/: build.sh
static/: script.js
templates/: index.html
