[project]
name = "flask-cool-app"
version = "0.1.0"
description = "一个简洁优雅的 Flask Web 应用项目，专注于快速开发和最佳实践"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.1.2",
]
authors = [
    { name = "Willard", email = "i@haowei.ch" }
]
keywords = ["flask", "web", "application", "starter", "minimal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
]

[build-system]
requires = ["uv==0.9.11"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/HaoweiCh/flask-cool-app"
Repository = "https://github.com/HaoweiCh/flask-cool-app.git"
Issues = "https://github.com/HaoweiCh/flask-cool-app/issues"

[project.scripts]
flask-cool-app = "app:main"

[tool.ruff]
src = ["app"]
line-length = 88
show-fixes = true
unsafe-fixes = false
target-version = "py311"

# Linting rules
[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "W", # Pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # Line length handled by formatter
    "E203", # Whitespace before ':'
]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist"
]

# Formatting rules
[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
order-by-type = true
force-single-line = false
combine-as-imports = true
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
known-third-party = ["flask"]
known-first-party = ["app"]
