[project]
name = "flask-cool-app"
version = "0.1.0"
description = "一个简洁优雅的 Flask Web 应用"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.0.0",
    "ruff>=0.1.0",
]

# Ruff 配置（仅保留核心）
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E203"]